# Touched-grass-yet

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: auto-release-on-version-bump.yml  release-build.yml  test.yml
docs/adr/: 0001-collection-parity-and-foreground-dual-track.md  0002-event-sourced-collection-architecture.md
scripts/: release-merge.sh
scripts/ci/: release_metadata.py
src/: app.py  main.py
src/UI/: db_viewer.py  home_page.py  settings_page.py
src/core/: config_manager.py  device_identity.py  logging_setup.py  paths.py  scheduler.py  sessionizer.py  tick_bus.py
src/core/application/: collection_manager.py  export_service.py
src/core/collectors/: base.py
src/core/collectors/android/: afk.py  app_usage.py  foreground.py  package_resolver.py  power.py  runtime.py  usage_stats.py
src/core/collectors/windows/: afk.py  browser.py  foreground.py  power.py  runtime.py  window.py
src/core/colllectors/android/: android_collection_manager.py
src/core/colllectors/windows/: system.py  windows_collection_manager.py
src/core/storage/: __init__.py
src/core/storage/schemas/: android.sql  core.sql  windows.sql
src/utils/: models.py
tests/: conftest.py  test_app_usage.py  test_collection_manager.py  test_config.py  test_error_hardening.py  test_export_service.py  test_foreground.py  test_parity.py  test_scheduler.py  test_sessionizer.py  test_smoke.py  test_storage.py  test_ui.py
