[project]
name = "touched-grass-yet"
version = "0.1.5"
description = "Cross-device app usage timeline tracker"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Sakth1", email = "sakthimurugankgm@gmail.com" }
]
dependencies = [
    "duckdb>=1.5.4",
    "flet>=0.85.3",
    "orjson>=3.11.9",
    "psutil>=7.2.2",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "flet-cli>=0.85.3",
    "flet-desktop>=0.85.3",
    "flet-web>=0.85.3",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = ["src/trial and error"]

[tool.ruff.lint]
select = ["F", "E", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.flet]
org = "com.mycompany"
product = "touched-grass-yet"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"

[tool.flet.android]
split_per_abi = true
compile_packages = true
dependencies = [
    "duckdb>=1.5.4",
    "flet>=0.85.3",
    "orjson>=3.11.9",
    "psutil>=7.2.2",
    "pyjnius",
    "rich>=15.0.0",
]

[tool.flet.android.permission]
"android.permission.PACKAGE_USAGE_STATS" = true

[tool.touched-grass-yet.release]
binary_name = "Touched-Grass-Yet"
